# neuro-mem2

./: .gitignore  CLAUDE.md  README.md  SPEC.md  package-lock.json  package.json
scripts/: dev-all.mjs
sdk/python/: pyproject.toml
sdk/python/nero_mem/: __init__.py  async_client.py  client.py  exceptions.py  models.py
sdk/python/tests/: test_async_client.py  test_client.py  test_models.py
src/: cli.ts  index.ts
tests/: anchor-candidate-finder.test.ts  anchor-decay.test.ts  anchor-edge-crud.test.ts  anchor-effective-weight.test.ts  anchor-embedding-storage.test.ts  anchor-fact-weighted-edge.test.ts  anchor-judgment.test.ts  anchor-linker.test.ts  anchor-scorer.test.ts  anchor-weight-flow.test.ts  anchor-weighted-edge.test.ts  api-e2e.test.ts  api-middleware.test.ts  api-router.test.ts  auth-loader.test.ts  batch-e2e.test.ts  bfs-expander.test.ts  chat-api.test.ts  chat-batch-extraction-trigger.test.ts  chat-conversation-repo.test.ts  chat-db.test.ts  chat-history-api.test.ts  chat-ingestion-trace.test.ts  chat-mount-integration.test.ts  chat-router-unified-retriever.test.ts  chat-router.test.ts  chat-sessions-api.test.ts  chat-stream-events.test.ts  chat-trace-events.test.ts  chat-trace-repo.test.ts  co-retrieval-tracker.test.ts  concept-batch-extractor.test.ts  concept-extractor.test.ts  context-formatter-progressive-depth.test.ts  context-injection.test.ts  context-injector-progressive-depth.test.ts  conversation-repo.test.ts  cosine-similarity.test.ts  cross-session-recall.test.ts  debug_embed.test.ts  (+67 more)
web/: index.html  package-lock.json  package.json  (+1 more)
(+236 files in other folders)
