[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nero-mem"
version = "0.1.0"
description = "Python SDK for the nero-mem2 local memory infrastructure"
requires-python = ">=3.9"
license = {text = "ISC"}
keywords = ["ai", "memory", "conversation", "context", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
async = ["aiohttp>=3.9"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "aiohttp>=3.9"]

[tool.setuptools.packages.find]
include = ["nero_mem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
